--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# SETUP FILES
+session.json
+blacklist.json
+
 # Logs
 logs
 *.log
@@ -5,8 +9,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
-session.json
-blacklist*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
